--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -58,19 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/book_appointment"
-            android:layout_marginTop="24dp"
-            map:cameraBearing="112.5"
-            map:cameraTargetLat="-33.796923"
-            map:cameraTargetLng="150.922433"
-            map:cameraTilt="30"
-            map:cameraZoom="13"
-            map:mapType="normal"
-            map:uiCompass="false"
-            map:uiRotateGestures="true"
-            map:uiScrollGestures="false"
-            map:uiTiltGestures="true"
-            map:uiZoomControls="false"
-            map:uiZoomGestures="true" />
+            android:layout_marginTop="24dp" />
 
         <TextView
             android:id="@+id/facility_address"
