--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,19 +53,31 @@
             android:text="@string/book_appointment" />
 
         <fragment
-            android:id="@+id/map"
+            android:id="@+id/provider_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="160dp"
             android:layout_below="@id/book_appointment"
-            android:layout_marginTop="24dp" />
+            android:layout_marginTop="24dp"
+            map:cameraBearing="112.5"
+            map:cameraTargetLat="37.7749"
+            map:cameraTargetLng="122.4194"
+            map:cameraTilt="30"
+            map:cameraZoom="13"
+            map:mapType="normal"
+            map:uiCompass="false"
+            map:uiRotateGestures="true"
+            map:uiScrollGestures="false"
+            map:uiTiltGestures="true"
+            map:uiZoomControls="false"
+            map:uiZoomGestures="true" />
 
         <TextView
             android:id="@+id/facility_address"
             style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/map"
+            android:layout_below="@id/provider_map"
             android:layout_marginTop="12dp"
             android:gravity="center"
             android:text="170 Alameda de las Pulgas\nRedwood City, CA 94062"
