--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -1,40 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/providersList"
+        <RelativeLayout
+            android:id="@+id/toolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/toolbar_white" />
+
+            <ImageView
+                android:id="@+id/fad_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="16dp"
+                android:src="@mipmap/more" />
+
+            <ImageView
+                android:id="@+id/fad_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/fad_more"
+                android:padding="16dp"
+                android:src="@mipmap/filter_blue" />
+
+            <ImageView
+                android:id="@+id/fad_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/fad_filter"
+                android:padding="16dp"
+                android:src="@mipmap/search_blue" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/search_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="@color/white"
+                android:elevation="8dp"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/searchQuery"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="@color/white"
+                    android:drawableLeft="@mipmap/search"
+                    android:drawablePadding="8dp"
+                    android:drawableRight="@mipmap/xblue"
+                    android:gravity="center_vertical"
+                    android:hint="Search care or condition"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:padding="8dp" />
+            </android.support.v7.widget.CardView>
+
+        </RelativeLayout>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/fadTabs"
+            style="@style/tradeGothicLTStd_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_below="@id/toolbarLayout"
+            app:tabIndicatorColor="@color/primary"
+            app:tabIndicatorHeight="2dp"
+            app:tabMode="fixed" />
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/fadPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/fadTabs" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/suggestionList"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="@string/find_a_doctor"
-            android:visibility="visible" />
+            android:layout_below="@+id/fadTabs"
+            android:background="@color/white"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/fad_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
             android:indeterminate="true"
-            android:visibility="gone" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/suggestionList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </RelativeLayout>
 </layout>
