--- a/MyHome/app/src/main/res/layout/appointments.xml
+++ b/MyHome/app/src/main/res/layout/appointments.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:layout_margin="@dimen/profile_label_marginTop"
-        android:text="@string/book_an_appointment" />
+        android:text="@string/book_an_appointment"
+        android:textSize="20sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_appointments"
