--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -61,7 +61,8 @@
         android:layout_width="20dp"
         android:layout_height="24dp"
         android:layout_alignBottom="@id/doctor_name"
-        android:layout_alignParentRight="true"
+        android:layout_alignRight="@id/time"
+        android:layout_alignLeft="@id/time"
         android:layout_marginEnd="12dp"
         android:layout_marginLeft="10dp"
         android:src="@mipmap/map_blue"
