--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -52,31 +52,31 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">normal</item>
-        <item name="android:fontFamily">monospace</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
     </style>
 
-    <style name="tradeGothicLTStd_16" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_16" parent="tradeGothicLTStdLight">
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="tradeGothicLTStd_18" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_18" parent="tradeGothicLTStdLight">
         <item name="android:textSize">18sp</item>
     </style>
 
-    <style name="tradeGothicLTStd_13" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_13" parent="tradeGothicLTStdLight">
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="tradeGothicLTStd_14" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_14" parent="tradeGothicLTStdLight">
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="tradeGothicLTStd_20" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_20" parent="tradeGothicLTStdLight">
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="tradeGothicLTStd_24" parent="tradeGothicLTStd">
+    <style name="tradeGothicLTStdLight_24" parent="tradeGothicLTStdLight">
         <item name="android:textSize">24sp</item>
     </style>
 </resources>
