--- a/MyHome/app/src/main/res/layout/navigation_activity.xml
+++ b/MyHome/app/src/main/res/layout/navigation_activity.xml
@@ -20,12 +20,12 @@
         android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation"
+        android:layout_above="@id/bottom_navigation_layout"
         android:layout_below="@id/toolbar" />
 
     <include
-        android:id="@+id/bottom_navigation"
-        layout="@layout/bottom_navigation"
+        android:id="@+id/bottom_navigation_layout"
+        layout="@layout/bottom_navigation_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
