--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -2,23 +2,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/sign_out"
-        style="@style/enableButtonStyle"
-        android:layout_width="255dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/profile_label_marginBottom"
-        android:layout_marginTop="@dimen/profile_label_marginTop"
-        android:text="@string/sign_out" />
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/sign_out">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/viewProfile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,6 +33,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/name"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Kev"
                 android:textSize="@dimen/profile_text_size"
@@ -55,6 +44,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/preferred_name"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Male"
                 android:textSize="@dimen/profile_text_size"
@@ -65,6 +55,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/gender"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="1/12/1987"
                 android:textSize="@dimen/profile_text_size"
@@ -75,6 +66,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/dob"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:ellipsize="end"
                 android:maxLines="3"
@@ -87,6 +79,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/address"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="867-5309"
                 android:textSize="@dimen/profile_text_size"
@@ -97,6 +90,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/phone"
                 android:layout_marginBottom="@dimen/profile_label_marginTop"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="kwelsh@prokarma.com"
@@ -108,6 +102,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/email"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Insurance Provider" />
 
@@ -116,6 +111,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/provider_label"
                 android:text="Dignity Health"
                 android:textSize="@dimen/profile_text_size"
                 android:textStyle="bold" />
@@ -125,6 +121,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/provider"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Member ID" />
 
@@ -133,6 +130,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/id_label"
                 android:text="800-588-2300"
                 android:textSize="@dimen/profile_text_size"
                 android:textStyle="bold" />
@@ -142,6 +140,7 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/id"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
                 android:text="Group" />
 
@@ -150,10 +149,23 @@
                 style="@style/tradeGothicLTStdLight_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/group_label"
                 android:text="230-2333"
                 android:textSize="@dimen/profile_text_size"
                 android:textStyle="bold" />
-        </LinearLayout>
+
+            <Button
+                android:id="@+id/sign_out"
+                style="@style/enableButtonStyle"
+                android:layout_width="255dp"
+                android:layout_height="45dp"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@id/group"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/profile_label_marginBottom"
+                android:layout_marginTop="@dimen/profile_label_marginTop"
+                android:text="@string/sign_out" />
+        </RelativeLayout>
     </ScrollView>
 
     <ProgressBar
