--- a/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
@@ -61,13 +61,16 @@
                 android:text="10.4 miles" />
 
             <ImageView
+                android:id="@+id/directions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/distance"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
+                android:onClick="@{handlers::onClickProvider}"
                 android:gravity="center"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="16dp"
                 android:src="@mipmap/map_blue" />
 
             <TextView
