Find A Doctor -> Find Care

--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/fad"
         android:icon="@mipmap/fad_blue"
-        android:title="Find A Doctor"
+        android:title="Find Care"
         app:showAsAction="ifRoom" />
 
     <item
