Profile Edit's State Picker now shows "State" instead of "Unavailable"

--- a/MyHome/app/src/main/res/values/string_arrays.xml
+++ b/MyHome/app/src/main/res/values/string_arrays.xml
@@ -23,7 +23,7 @@
 
     <!--States for Profile Edit-->
     <string-array name="profile_states">
-        <item>Not Available</item>
+        <item>State</item>
         <item>AL</item>
         <item>AK</item>
         <item>AZ</item>
