--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -79,4 +79,34 @@
     <style name="tradeGothicLTStdLight_24" parent="tradeGothicLTStdLight">
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="MonthTextAppearance" parent="TextAppearance.MaterialCalendarWidget.Header">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="WeekDayTextAppearance" parent="TextAppearance.MaterialCalendarWidget.WeekDay">
+        <item name="android:textColor">@color/text_darker</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">13sp</item>
+        <!--<item name="android:textSize">16sp</item>-->
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="DayTextAppearance" parent="TextAppearance.MaterialCalendarWidget.Date">
+        <!--<item name="android:textColor">@color/primary</item>-->
+        <item name="android:typeface">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">13sp</item>
+        <!--<item name="android:textSize">16sp</item>-->
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
 </resources>
