--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -64,7 +64,7 @@
             android:layout_marginTop="24dp"
             android:orientation="vertical">
 
-            <com.dignityhealth.myhome.views.CustomCalendar
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 android:id="@+id/calendar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
