Refactored View Pager name to Stats View Pager

--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -124,7 +124,7 @@
             app:tabMode="fixed" />
 
         <com.dignityhealth.myhome.views.WrappingViewPager
-            android:id="@+id/view_pager"
+            android:id="@+id/stats_view_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tabs" />
