--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -62,12 +62,13 @@
             android:layout_height="330dp"
             android:layout_below="@id/book_appointment"
             android:layout_marginTop="24dp"
-            android:background="@color/beige"
+            android:background="@color/google_white"
             android:orientation="vertical">
 
-            <include
-                android:id="@+id/calendar"
-                layout="@layout/book_calendar" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/booking_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </com.github.aakira.expandablelayout.ExpandableLinearLayout>
 
