--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -38,6 +38,14 @@
         <item name="android:layout_height">44dp</item>
     </style>
 
+    <style name="selectableButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_enabled</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">44dp</item>
+    </style>
+
     <style name="textStylebase" />
 
     <style name="tradeGothicLTStd" parent="textStylebase">
