--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -39,8 +39,8 @@
     </style>
 
     <style name="selectableButtonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:background">@drawable/button_enabled</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/selectable_button</item>
+        <item name="android:textColor">@drawable/selectable_button_text</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
