--- a/MyHome/app/src/main/res/layout/book_reason.xml
+++ b/MyHome/app/src/main/res/layout/book_reason.xml
@@ -47,4 +47,20 @@
 
     </com.dignityhealth.myhome.views.FlowLayout>
 
+    <EditText
+        android:id="@+id/booking_reason"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="left"
+        android:background="@drawable/edit_text_boarder_grey"
+        android:hint="Please tell us the purpose of your visit." />
+
+    <Button
+        android:id="@+id/book_submit"
+        style="@style/selectableButtonStyle"
+        android:layout_width="255dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="18dp"
+        android:text="Next" />
+
 </LinearLayout>
